client/public/assets/css/main.css
/* ... */
#contact > .inner > :nth-child(2n) {
  padding-left: 3em;
  width: 40%;
}

#contact > .inner > .split {
  padding: 0;
}

#contact > .inner > .split > * {
  padding: 3em 0 1em 3em;
  position: relative;
}

#contact > .inner > .split > *:before {
  border-top: solid 1px rgba(212, 212, 255, 0.1);
  content: '';
  display: block;
  margin-left: -3em;
  position: absolute;
  top: 0;
  width: calc(100vw + 3em);
}

#contact > .inner > .split > :first-child:before {
  display: none;
}

@media screen and (max-width: 980px) {
  #contact > .inner {
    display: block;
  }

  #contact > .inner > :nth-child(2n - 1) {
    padding: 4em 0 2em 0;
    border-right: 0;
    width: 100%;
  }

  #contact > .inner > :nth-child(2n) {
    padding-left: 0;
    width: 100%;
  }

  #contact > .inner > .split > * {
    padding: 3em 0 1em 0;
  }

  #contact > .inner > .split > :first-child:before {
    display: block;
  }
}

@media screen and (max-width: 736px) {
  #contact > .inner > :nth-child(2n - 1) {
    padding: 3em 0 1em 0;
  }
}

/* Footer */

#footer .copyright {
  font-size: 0.8em;
  list-style: none;
  padding-left: 0;
}

#footer .copyright li {
  border-left: solid 1px rgba(212, 212, 255, 0.1);
  color: rgba(244, 244, 255, 0.2);
  display: inline-block;
  line-height: 1;
  margin-left: 1em;
  padding-left: 1em;
}

#footer .copyright li:first-child {
  border-left: 0;
  margin-left: 0;
  padding-left: 0;
}

@media screen and (max-width: 480px) {
  #footer .copyright li {
    display: block;
    border-left: 0;
    margin-left: 0;
    padding-left: 0;
    line-height: inherit;
  }
}

/* Wrapper */

#wrapper {
  -moz-transition: -moz-filter 0.35s ease, -webkit-filter 0.35s ease,
    opacity 0.375s ease-out;
  -webkit-transition: -webkit-filter 0.35s ease, -webkit-filter 0.35s ease,
    opacity 0.375s ease-out;
  -ms-transition: -ms-filter 0.35s ease, -webkit-filter 0.35s ease,
    opacity 0.375s ease-out;
  transition: filter 0.35s ease, -webkit-filter 0.35s ease,
    opacity 0.375s ease-out;
  padding-top: 3.25em;
}

#wrapper.is-transitioning {
  opacity: 0;
}

#wrapper > * > .inner {
  padding: 4em 0 2em 0;
  margin: 0 auto;
  max-width: 65em;
  width: calc(100% - 6em);
}

@media screen and (max-width: 736px) {
  #wrapper > * > .inner {
    padding: 3em 0 1em 0;
    width: calc(100% - 3em);
  }
}

@media screen and (max-width: 736px) {
  #wrapper {
    padding-top: 2.75em;
  }
}

/* Menu */

#menu {
  -moz-transition: -moz-transform 0.35s ease, opacity 0.35s ease,
    visibility 0.35s;
  -webkit-transition: -webkit-transform 0.35s ease, opacity 0.35s ease,
    visibility 0.35s;
  -ms-transition: -ms-transform 0.35s ease, opacity 0.35s ease, visibility 0.35s;
  transition: transform 0.35s ease, opacity 0.35s ease, visibility 0.35s;
  -moz-align-items: center;
  -webkit-align-items: center;
  -ms-align-items: center;
  align-items: center;
  display: -moz-flex;
  display: -webkit-flex;
  display: -ms-flex;
  display: flex;
  -moz-justify-content: center;
  -webkit-justify-content: center;
  -ms-justify-content: center;
  justify-content: center;
  pointer-events: none;
  background: rgba(36, 41, 67, 0.9);
  box-shadow: none;
  height: 100%;
  left: 0;
  opacity: 0;
  overflow: hidden;
  padding: 3em 2em;
  position: fixed;
  top: 0;
  visibility: hidden;
  width: 100%;
  z-index: 10002;
}

#menu .inner {
  -moz-transition: -moz-transform 0.35s ease-out, opacity 0.35s ease,
    visibility 0.35s;
  -webkit-transition: -webkit-transform 0.35s ease-out, opacity 0.35s ease,
    visibility 0.35s;
  -ms-transition: -ms-transform 0.35s ease-out, opacity 0.35s ease,
    visibility 0.35s;
  transition: transform 0.35s ease-out, opacity 0.35s ease, visibility 0.35s;
  -moz-transform: rotateX(20deg);
  -webkit-transform: rotateX(20deg);
  -ms-transform: rotateX(20deg);
  transform: rotateX(20deg);
  -webkit-overflow-scrolling: touch;
  max-width: 100%;
  max-height: 100vh;
  opacity: 0;
  overflow: auto;
  text-align: center;
  visibility: hidden;
  width: 18em;
}

#menu .inner > :first-child {
  margin-top: 2em;
}

#menu .inner > :last-child {
  margin-bottom: 3em;
}

#menu ul {
  margin: 0 0 1em 0;
}

#menu ul.links {
  list-style: none;
  padding: 0;
}

#menu ul.links > li {
  padding: 0;
}

#menu ul.links > li > a:not(.button) {
  border: 0;
  border-top: solid 1px rgba(212, 212, 255, 0.1);
  display: block;
  font-size: 0.8em;
  font-weight: 600;
  letter-spacing: 0.25em;
  line-height: 4em;
  text-decoration: none;
  text-transform: uppercase;
}

#menu ul.links > li > .button {
  display: block;
  margin: 0.5em 0 0 0;
}

#menu ul.links > li:first-child > a:not(.button) {
  border-top: 0 !important;
}

#menu .close {
  -moz-transition: color 0.2s ease-in-out;
  -webkit-transition: color 0.2s ease-in-out;
  -ms-transition: color 0.2s ease-in-out;
  transition: color 0.2s ease-in-out;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  border: 0;
  cursor: pointer;
  display: block;
  height: 4em;
  line-height: 4em;
  overflow: hidden;
  padding-right: 1.25em;
  position: absolute;
  right: 0;
  text-align: right;
  text-indent: 8em;
  top: 0;
  vertical-align: middle;
  white-space: nowrap;
  width: 8em;
}

#menu .close:before,
#menu .close:after {
  -moz-transition: opacity 0.2s ease-in-out;
  -webkit-transition: opacity 0.2s ease-in-out;
  -ms-transition: opacity 0.2s ease-in-out;
  transition: opacity 0.2s ease-in-out;
  background-position: center;
  background-repeat: no-repeat;
  content: '';
  display: block;
  height: 4em;
  position: absolute;
  right: 0;
  top: 0;
  width: 4em;
}

#menu .close:before {
  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width='20px' height='20px' viewBox='0 0 20 20' zoomAndPan='disable'%3E%3Cstyle%3Eline %7B stroke: %23ffffff%3B stroke-width: 2%3B %7D%3C/style%3E%3Cline x1='0' y1='0' x2='20' y2='20' /%3E%3Cline x1='20' y1='0' x2='0' y2='20' /%3E%3C/svg%3E");
}
/* ... */

